# clash-starters

./: README.md  flake.nix
deca/: README.md  cabal.project  deca.cabal  stack.yaml
deca/src/: DECA.hs
deca/syn/: addclashsources.tcl  deca.qpf  deca.qsf  deca_ext.sdc
deca/tests/: doctests.hs  unittests.hs
deca/tests/Tests/: DECA.hs
orangecrab/: .gitignore  Makefile  README.md  build.cfg  cabal.project  orangecrab.cabal  orangecrab.pcf  stack.yaml
orangecrab/src/: Blink.hs  RGB.hs
orangecrab/src/Orangecrab/: Domain.hs
orangecrab/tests/: doctests.hs  unittests.hs
orangecrab/tests/Tests/: Blink.hs
simple/: README.md  cabal.project  hie.yaml  simple.cabal  stack.yaml
simple-nix/: README.md  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix  simple-nix.cabal
simple-nix/nix/: nixpkgs.nix  sources.json
simple-nix/src/Example/: Project.hs
simple-nix/tests/: doctests.hs
simple/tests/: doctests.hs  unittests.hs
simple/tests/Tests/Example/: Project.hs
